[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Towers/Factory/factory.png" type="Texture" id=1]
[ext_resource path="res://src/Factory/Factory.gd" type="Script" id=2]
[ext_resource path="res://src/Factory/Factory UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Factory/Shaders/Color Switch.tres" type="Material" id=4]

[sub_resource type="Animation" id=4]
resource_name = "Build"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.2 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 34 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 9 )

[sub_resource type="CircleShape2D" id=3]
radius = 96.0

[node name="Factory" type="Node2D"]
show_behind_parent = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 4 )
position = Vector2( 4, -44 )
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Build = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Scrap_Detection" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scrap_Detection"]
position = Vector2( 0, -30 )
shape = SubResource( 1 )

[node name="Box_Spawn" type="Position2D" parent="."]
position = Vector2( 32, -32 )

[node name="Interaction_Area" type="Area2D" parent="."]
position = Vector2( 16, -4 )
collision_layer = 32
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_Area"]
position = Vector2( 2, -1 )
shape = SubResource( 2 )

[node name="Camera_Position" type="Position2D" parent="."]
position = Vector2( 0, -28 )

[node name="Manning_Position" type="Position2D" parent="."]
position = Vector2( 20, -8 )

[node name="Construction_Timer" type="Timer" parent="."]
one_shot = true

[node name="Exception_Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exception_Area"]
visible = false
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[connection signal="timeout" from="Construction_Timer" to="." method="send_box"]
[connection signal="body_entered" from="Exception_Area" to="." method="_on_exception_area_entered"]
[connection signal="body_exited" from="Exception_Area" to="." method="_on_exception_area_exited"]
[connection signal="construct_pressed" from="CanvasLayer/Control" to="." method="build"]
[connection signal="leave_pressed" from="CanvasLayer/Control" to="." method="exit_building"]
[connection signal="selected_changed" from="CanvasLayer/Control" to="." method="change_selected"]
[connection signal="stop_pressed" from="CanvasLayer/Control" to="." method="stop_build"]
